# lulesh-task-based-hpx

./: CMakeLists.txt  LICENSE  README.md  lulesh-init.cc  lulesh-util.cc  lulesh-viz.cc  lulesh.cc  lulesh.h
patches/: ae.patch
scripts/: compile.sh  generate-graphs.py  run-full.sh  run-reduced.sh
